...
    <string name="tnc_driver_card_text">TNC Driver Card</string>
    <string name="you_will_need_a_tnc_card_text">You will need a TNC Card from the City Transportation Office</string>
    <string name="dont_have_one_tnc_text">Don\'t have one?</string>
    <string name="mock_tnc_instructions_text"><![CDATA[View instructions <a href=\"https://media.rideaustin.com/download/Houston_TNC_Application_Form_2016.pdf\">here</a> on how to obtain one. Download TNC Driver Registration forms <a href=\"https://media.rideaustin.com/download/Houston_TNC_Application_Form_2016.pdf\">here</a>.]]></string>
    <string name="general_server_comunication_error">We experienced error during server communication, do you want to retry?</string>

    <string name="missing_tnc_card_photo_warning">Please upload %s photo to continue</string>
    <string name="missing_tnc_card_expiration_date_warning">Please choose valid expiration date to continue</string>

    <string name="loading">Loading…</string>
    <string name="you_have_arrived_to_pickup_location">You have arrived to pickup location</string>

    <string name="fb_email_error">Please allow to use your email in order to complete registration</string>
    <string name="fb_login_error">We are unable to access your email associated with Facebook.\nPlease check your permissions for %1$s and/or create a %1$s account using your email</string>
...

    <string name="title_driver_photo">Your Driver Photo</string>
    <string name="title_driver_license">Driver License</string>
    <string name="title_driver_tnc_sticker">Auto Inspection Sticker</string>
    <string name="title_driver_insurance">Insurance</string>
    <string name="title_terms_and_conditions">Terms and Conditions</string>
    <string name="title_driver_vehicle_information">Vehicle Information</string>
    <string name="title_driver_year">Year</string>
    <string name="title_driver_make">Make</string>
    <string name="title_driver_model">Model</string>
    <string name="title_driver_color">Color</string>
    <string name="title_license_plate">License plate</string>
    <string name="licence_place">Licence place</string>
    <string name="driver_licence_expiration_date">Expiration Date:</string>
    <!-- driver -->
    <string name="register_driver">Register as a driver</string>
    <string name="register_driver_sucess">Thank you for your application! We will reach out to you soon regarding next steps.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>

    <string name="rating_feedback_message_text">What feedback would you give %s</string>

    <string name="driver_info">Interested in\nbecoming a driver?</string>
    <string name="coming_soon">Coming soon, please be patient</string>
    <string name="license_confirm">Have you had your license for at least ONE year?</string>
...
